style.css
body {
    margin: 0;
    font-family: 'Roboto';
}
.section-1,
.footer {
    background-color: #1f2937;
}
.logo {
    color: #f9faf8;
    font-size: 24px;
}
.header-links,
.left_h p {
    color: #e5e7eb;
    font-size: 18px;
}
ul {
    list-style-type: none;
    display: flex;
    padding: 0;
    margin: 0;
}
ul, li, a {
    margin-right: 15px;
    text-decoration: none;
    color: #e5e7eb;
}
.left_h h1 {
    font-size: 48px;
    font-weight: bolder;
    color: #f9faf8;
}
.header {
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 30px;
}
.hero {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    gap: 10px;
    padding: 20px;
    flex: 1;
}
button {
    background-color: #3882f6;
    color: white;
    font-size: 12px;
    border: none;
    border-radius: 8px;
    padding: 8px 25px;
}
.left_h {
    display: flex;
    flex-wrap: wrap;
    flex: 1;
}
.right_h {
    display: flex;
    flex: auto;
    justify-content: center;
    align-content: center;
    margin: 10px;
}
.left_h,
.right_h {
    display: flex;
    align-items: center;
    gap: 15px;
}

.section-2,
.s2-header {
    text-align: center;
    margin-bottom: 30px;
    margin-top: 16px;
}
.s2-header {
    font-size: 36px;
    font-weight: 800;
    color: #1f2937;
}
.container {
    display: flex;
    justify-content: center;
    gap: 50px;
}
.container img {
    width: 230px;
    height: 230px;
    border-radius: 12px;
    border: 2px solid darkblue;
}
.i {
    max-width: 300px;
}

.section-3 {
    display: flex;
    justify-content: center;
    align-items: center;
    height: 30vh;
    background-color: #e5e7eb;
}
.quote {
    position: relative;
    display: flex;
    margin: 0 auto;
    padding: 15px;
}
.quote p {
    font-size: 30px;
    font-style: italic;
    color: #1f2937;
    margin: 15px;
}
.quote h5 {
    position: absolute;
    top: 100px;
    right: 10px;
    font-size: 20px;
    margin-right: 20px;
}

